--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -8,13 +8,14 @@ body{
 
 .top-bar{
 	max-width:1000px;
-	margin:auto;
+	margin-left: auto;
 }
 
 .logo{
 	font-family:$logo-font;
 	font-size:50px;
 	position:absolute;
+	left : 50px;
 	margin-top:15px;
 }
 
